--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 1. Setup PHP (Sudah ada sebelumnya)
+      # 1. Setup PHP
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -35,13 +35,13 @@ jobs:
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
           coverage: none
 
-      # 2. Setup Node.js (BARU: Untuk mengatasi Vite Error)
+      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # 3. Install & Build Frontend (BARU: Membuat manifest.json)
+      # 3. Install & Build Frontend
       - name: Install & Build Frontend
         run: |
           npm install
@@ -57,7 +57,7 @@ jobs:
       - name: Generate app key
         run: php artisan key:generate
 
-      # 5. Jalankan Tes dengan Database Memory
+      # 5. Setup Database
       - name: Execute tests
         env:
           DB_CONNECTION: sqlite
